--- a/css/styles.scss
+++ b/css/styles.scss
@@ -505,3 +505,57 @@ footer {
 		}
 	}
 }
+@media only screen and (max-width: 690px) {
+	header .container-fluid {
+		min-height: 410px;
+		background-position: -30px 0px;
+		.container:nth-child(2) .col-md-5 h1 {
+			font-size: 2.5em;
+			margin-left: 0;
+		}
+	}
+} 
+@media only screen and (max-width: 480px) {
+	header .container-fluid {
+		min-height: 315px;
+		.container:nth-child(2) .col-md-5 h1 {
+			font-size: 1.8em;
+			margin: 0;
+		}
+	}
+	main {
+		.first-top .container p { padding: 0 10%; }
+		.second-top { 
+			height: 350px; 
+			.col-xs-5 {
+				width: 44%;
+				h2 { font-size: 1.9em; }
+				p { line-height: 1.6em }
+			}
+		}
+		.third-top .col-md-6 {
+			width: 100%;
+			margin-left: 0;
+		}
+		.news .container .col-md-6 {
+			padding: 0;
+			.col-xs-3, .col-xs-9 { padding: 0; }
+			.col-xs-9 h3, p { padding-left: 20px; }
+		}
+		.testimonials .test-subj-sp {
+			h3 { margin: 10px 0;}
+			p { line-height: 1.75em; }
+		}
+		.connect {
+			.col-xs-3 {
+			height: 135px;
+			width: 30%;
+			margin: 5%;
+			&:nth-child(2n) { margin-left: 15%; }
+			&:nth-child(2n+1) { margin-right: 15%; }
+			}
+		}
+		
+		
+	}
+}
